@@ -1,6 +1,6 @@
-/* 
- * Copyright (c) 1993-1997 by Alexander V. Lukyanov (lav@yars.free.net)
- * 
+/*
+ * Copyright (c) 1993-2004 by Alexander V. Lukyanov (lav@yars.free.net)
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or
@@ -27,3 +27,5 @@ void  set_chset_8bit_noctrl();
 
 void  addch_visual(chtype ch);
 chtype visualize(struct attr *a,chtype ch);
+
+bool chset_isprint(int);
